# libzerocoin

./: Accumulator.h  AccumulatorProofOfKnowledge.cpp  AccumulatorProofOfKnowledge.h  CMakeLists.txt  Coin.cpp  Coin.h  CoinSpend.cpp  CoinSpend.h  Commitment.h  CommitmentProofOfKnowledge.h  Denominations.cpp  Makefile.am  ParamGeneration.cpp  ParamGeneration.h  Params.h  SerialNumberSignatureOfKnowledge.cpp  SerialNumberSignatureOfKnowledge.h  Zerocoin.h  autogen.sh  bignum-openssl3.patch  configure.ac  libzerocoin.pc.in  zerocoin.pc.in
bitcoin_bignum/: bignum.cpp  bignum.h  bignum_error.h  config.h.in  configure.ac  hash.h  serialize.h  uint256.h
include/: Accumulator.h  AccumulatorProofOfKnowledge.h  AccumulatorWitness.h  Bignum.h  CBigNum.h  Coin.h  CoinSpend.h  Commitment.h  ParamGeneration.h  Params.h  SerialNumberSignatureOfKnowledge.h  SpendMetaData.h  Stream.h  Zerocoin.h  allocators.h  bignum.h  bignum_error.h  hash.h  libzerocoin.h  netbase.h  serialize_stub.h  zerocoin_defs.h  zerocoin_types.h
src/: .bignum.cpp.kate-swp  Accumulator.cpp  AccumulatorProofOfKnowledge.cpp  Coin.cpp  CoinSpend.cpp  Commitment.cpp  ParamGeneration.cpp  Params.cpp  SerialNumberSignatureOfKnowledge.cpp  SpendMetaData.cpp  Zerocoin.cpp  bignum.cpp  hash.cpp  libzerocoin.cpp  serialize_stub.h  test_basic.cpp  zerocoin_types.cpp
